# EasyRayTracing

./: CMakeLists.txt
src/: main.cpp  shader.hpp
src/shader/: fragment.frag  mix.frag  vertex.vert
src/utils/: loader.h
